--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,5 +9,8 @@
          https://developer.android.com/design/patterns/navigation-drawer.html
     -->
     <dimen name="navigation_drawer_width">240dp</dimen>
+    
+    
+    <dimen name="toast_padding">10dp</dimen>
 
 </resources>
